--- a/css/general.css
+++ b/css/general.css
@@ -16,8 +16,11 @@ header nav {color:#790e11; height:30px;}
 	nav ul li a {display:block; color:#790e11; text-decoration:none; padding:2px 8px; margin-top:8px;}
 	nav ul li a:hover, nav ul li.active a {color:#fff;}
 aside {min-height:525px;}
-footer { font-size:.8em; background:#780e12; height:400px;}
-
+footer { font-size:.8em; background:#780e12; height:359px;}
+#footer_top{background:url(../images/kamel_24.jpg)  repeat-x top #780e12; height:41px;}
+#footer_body { background:url(../images/kamel_27.jpg) repeat-x #780e12; height:318px;}
+.buy { background:url(../images/cart_1.png); width:29px; height:26px; display:block;}
+#buy_box{margin:0 0 0 20px;}
 /*------------------------------------------------*/
 /*-------------------[SIDEBAR]--------------------*/
 /*------------------------------------------------*/
@@ -96,14 +99,14 @@ ul.products {
     width: 100%;
 }
 #featured-box {
-height:240px;
+height:220px;
 width:97%;
 background-color:#fffdfa;
 border:solid 7px #e7e3a8;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;
 }
 .featuredProduct{
 display:block;
-position: relative; float: left; width: 50%; height: 133px; margin: 5px 0 5px 5x;; cursor: pointer;
+position: relative; float: left; width: 50%; height: 180px; margin: 5px 0 5px 5x;; cursor: pointer;
 }
 .featuredProduct a img{
 margin: 5px 16px;
