--- a/css/general.css
+++ b/css/general.css
@@ -20,7 +20,7 @@ footer { font-size:.8em; background:#780e12; height:359px;}
 #footer_top{background:url(../images/kamel_24.jpg)  repeat-x top #780e12; height:41px;}
 #footer_body { background:url(../images/kamel_27.jpg) repeat-x #780e12; height:318px;}
 .buy { background:url(../images/cart_1.png); width:29px; height:26px; display:block;}
-#buy_box{margin:0 0 0 20px;}
+#buy_box{margin:0 0 0 20px; font:Arial, Helvetica, sans-serif bold medium;}
 /*------------------------------------------------*/
 /*-------------------[SIDEBAR]--------------------*/
 /*------------------------------------------------*/
