--- a/css/general.css
+++ b/css/general.css
@@ -5,12 +5,12 @@ body { margin: 0px; padding: 0px 0px 0px 0px; color: #413f36; background-color:#
 
 .bar {background:url(../images/kamel_02.jpg);width: 100%;height:49px;}
 .logo, h1, h2, h3, h4, h5 { font-family: 'Yanone Kaffeesatz', arial, serif; }
-#bodywrap { width: 100%; background-image: url(../images/bg-2.jpg); background-repeat: no-repeat; background-position: top center; padding:56px 0px 0px 0px; }
+#bodywrap {width: 100%; background-image: url(../images/bg-2.jpg); background-repeat: no-repeat; background-position: top center; padding:56px 0px 0px 0px; }
 #bottom-bg {width: 100%; background-image: url(../images/bg-3.jpg); background-repeat: no-repeat; background-position: bottom center; padding-bottom: 90px;}
 header {height:112px; position:relative; margin-bottom:5px;}
 header .logo {font-size:2.5em; height:52px; padding-top:28px; font-weight:700; text-shadow:1px 1px 2px #000; color:#fff; filter: Shadow(Color=#666666, Direction=135, Strength=3);}
-header .statement {width:40%; text-align:right; padding-top:5px;}
-header nav {color:#790e11; height:30px;}
+header .statement {width:50%; text-align:right; padding-top:5px;}
+header nav {color:#790e11; height:30px;font-family: 'Righteous', cursive; font-size:1.5em;}
 	nav ul {list-style:none;}
 	nav ul li {float:left; margin-left:5px;}
 	nav ul li a {display:block; color:#790e11; text-decoration:none; padding:2px 8px; margin-top:8px;}
@@ -20,7 +20,8 @@ footer { font-size:.8em; background:#780e12; height:359px;}
 #footer_top{background:url(../images/kamel_24.jpg)  repeat-x top #780e12; height:41px;}
 #footer_body { background:url(../images/kamel_27.jpg) repeat-x #780e12; height:318px;}
 .buy { background:url(../images/cart_1.png); width:29px; height:26px; display:block;}
-#buy_box{margin:0 0 0 20px; font:Arial, Helvetica, sans-serif bold medium;}
+#buy_box{margin:0 0 0 20px; font:Arial, Helvetica, sans-serif; font-size: medium; font-weight: bold; color:#690;}
+.deco{ padding: 0 25px;background:url(../images/kamel_14.jpg) no-repeat; font-family: 'Righteous', cursive; font-size:1.5em;}
 /*------------------------------------------------*/
 /*-------------------[SIDEBAR]--------------------*/
 /*------------------------------------------------*/
@@ -35,7 +36,7 @@ footer { font-size:.8em; background:#780e12; height:359px;}
 #connect { width: 270px; height: 54px; background-image: url(../images/connect-bg.jpg); float: left; padding-top: 46px; padding-left: 10px; margin-top: -46px;   }
 #connect2 { width: 270px; height: 54px; float: left; padding-top: 46px; padding-left: 10px; margin-top: -46px;   }
 .icon { float: left; margin-left: 5px; border: none; }
-.sidebar-box div { float: left; }
+.sidebar-box div { float: left;}
 
 
 /* ** ** Common Addative Classes ** ** */
