--- a/css/general.css
+++ b/css/general.css
@@ -1,21 +1,21 @@
 @charset "utf-8";
 /* 52framework General StyleSheet - contains styles for all the HTML elements this framework supports */
 
-body { margin: 0px; padding: 0px 0px 0px 0px; color: #413f36; background-color:#f4efd6; background-image: url(../images/bg.jpg); font-family: Arial; font-size: 12px; line-height: 22px; }
+body {margin: 0px; padding: 0px 0px 0px 0px; color: #413f36; background-color:#f4efd6; background-image: url(../images/bg.jpg); font-family: Arial; font-size: 12px; line-height: 22px;}
 
 .bar {background:url(../images/kamel_02.jpg);width: 100%;height:49px;}
-.bar, .phone {font-size: 1.5em; text-shadow:1px 1px 2px #000; color:#fff; filter: Shadow(Color=#666666, Direction=135, Strength=3);}
+.bar, .phone {font-family: 'Righteous', cursive; font-size: 1.2em; text-shadow:1px 1px 2px #000; color:#fff; filter: Shadow(Color=#666666, Direction=135, Strength=3);}
 #loginbox {color: #FFF;}
 #cartTotal {
    background: url("../images/cart_2.png") no-repeat scroll center top;
-    display: block;
-    float: right;
-    height: 50px;
-    margin-left: 20px;
-    padding-right: 0;
-    width: 50px;
+   display: block;
+   float: right;
+   height: 50px;
+   margin-left: 20px;
+   padding-right: 0;
+   width: 50px;
 }
-.logo, .bar, h1, h2, h3, h4, h5 { font-family: 'Yanone Kaffeesatz', arial, serif; }
+.logo, h1, h2, h3, h4, h5 { font-family: 'Yanone Kaffeesatz', arial, serif; }
 #bodywrap {width: 100%; background-image: url(../images/bg-2.jpg); background-repeat: no-repeat; background-position: top center; padding:56px 0px 0px 0px; }
 #bottom-bg {width: 100%; background-image: url(../images/bg-3.jpg); background-repeat: no-repeat; background-position: bottom center; padding-bottom: 90px;}
 header {height:112px; position:relative; margin-bottom:5px;}
