--- a/css/general.css
+++ b/css/general.css
@@ -5,6 +5,7 @@ body {margin: 0px; padding: 0px 0px 0px 0px; color: #413f36; background-color:#f
 
 .bar {background:url(../images/kamel_02.jpg);width: 100%;height:49px;}
 .bar, .phone {font-family: 'Righteous', cursive; font-size: 1.2em; text-shadow:1px 1px 2px #000; color:#fff; filter: Shadow(Color=#666666, Direction=135, Strength=3);}
+.white_text {font-size: 1.2em; text-shadow:1px 1px 2px #000; color:#fff; filter: Shadow(Color=#666666, Direction=135, Strength=3);}
 #loginbox {color: #FFF;}
 #cartTotal {
    background: url("../images/cart_2.png") no-repeat scroll center top;
