--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -7,34 +7,64 @@
 {% endblock %}
 <head>
     {% block extra-head %}{% endblock %}
-    {% block stylesheet %}<link rel="stylesheet" href="{{ media_url }}css/style.css" />{% endblock %}
+    {% block stylesheet %}
+    <link rel="stylesheet" href="{{ media_url }}css/style.css" />
+    <link rel="stylesheet" type="text/css" href="{{ media_url }}css/reset.css" media="screen" title="html5doctor.com Reset Stylesheet" />
+    <link rel="stylesheet" type="text/css" href="{{ media_url }}css/css3.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{ media_url }}css/general.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{ media_url }}css/grid.css" media="screen" />
+    <link href='http://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+    <!-- @font-face provided by google, works on 97% of browsers -->
+    <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+    {% endblock %}
     <title>{% block title %}{{ shop_name }}{% if pagetitle %}: {{ pagetitle }}{% endif %}{% endblock %}</title>
     {% plugin_point "page_head" %}
 </head>
 {% block body %}
-<body{% if bodyid %} id="{{ bodyid }}"{% endif %}{% if bodyclass %} class="{{ bodyclass }}"{% endif %}>
+<body onload="draw();" {% if bodyid %} id="{{ bodyid }}"{% endif %}{% if bodyclass %} class="{{ bodyclass }}"{% endif %}>
     {% plugin_point "page_top" %}
-    <div id="container">
-	    <div id="top">
-	        <h1>{{ shop_name }}</h1>
-	    </div>
-
-	    <div id="navbar">
-	    <ul>
-	    	{% block navbar %}Breadcrumbs here{% endblock %}
-	   	</ul>
-    </div>
-
-    <div id="sidebar-secondary">
-		{% block sidebar-secondary %}
-		<div>
-			{% satchmo_search_form %}
-		</div>
-		<div>
-			{% block sidebar %}
-			<h3>{% trans "Shop Categories" %}</h3>
-			{% block sidebar-categories %}
-			<div id="menu_container">
+    <div class="bar">
+<div class="row">
+<div class="left col col_8 phone"><img src="{{ media_url }}images/phone.png" height="29px" width="29px"/> (058) 555 555 555</div>
+<div class="right align_right col col_8">
+<div id="cartTotal"></div>
+<a class="white_text" href="#">Zaloguj</a></div>
+</div>
+</div>
+<div id="bodywrap">
+<div id="bottom-bg">
+<div class="row">
+    <header>
+        <div class="logo left"><a href="/">{{ shop_name }}</a></div>
+        
+        <div class="statement right">
+        <nav>
+            <ul>
+                <li><a href="/">Start</a></li>
+                <li class="active"><a href="css3.html">O Nas</a></li>
+                <li><a href="canvas.html">Oferta</a></li>
+                <li><a href="http://52framework.com/documentation">Współpraca</a></li>
+                <li><a href="http://52framework.com/about">Kontakt</a></li>
+            </ul>
+        </nav>
+        </div>
+        <div class="clear"></div>
+    </header>
+<div class="clear"></div>
+<div class="col_16"><img src="{{ media_url }}images/kamel_07.jpg" width="960" height="354" alt="gdansk"></div>
+<div class="col_5 col ">
+ <div class="sidebar-box-wrap">
+    <div class="sidebar-box">
+    <span class="sidebar-box-title">{% trans "Shop Categories" %}</span>
+     {% block sidebar-secondary %}
+        <div>
+            {% satchmo_search_form %}
+        </div>
+        <div>
+            {% block sidebar %}
+            <h3></h3>
+            {% block sidebar-categories %}
+            <div id="menu_container">
                 {% if category.id %}
                     {% category_tree category.id %}
                 {% else %}
@@ -44,82 +74,67 @@
                         {% category_tree %}
                     {% endif %}
                 {% endif %}
-			</div>
-			{% endblock sidebar-categories %}
-			
-			{% block sidebar-secondary-bottom %}
-			{% plugin_point "sidebar_secondary_bottom" %}
-			{% endblock %}
-			{% endblock sidebar %}
-		</div>
-		{% endblock sidebar-secondary %}
-	</div>
-
-	<div id="sidebar-primary">{# rightnav #}
-		{% block sidebar-primary %}
-		<h3>{% trans "Quick Links" %}</h3>
-		{% url satchmo_product_recently_added as recenturl %}
-		{% if recenturl %}<a href="{{ recenturl }}">{% trans "Recently Added" %}</a>{% endif %}
-		{% url satchmo_product_best_selling as popularurl %}
-		{% if popularurl %}<br/><a href="{{ popularurl }}">{% trans "Best Sellers" %}</a><br/>{% endif %}
-        {% url satchmo_category_index as category_index %}
-        {% if category_index %} <a href="{{ category_index }}">{% trans "Category Index" %}</a><br /> {% endif %}
-        {% url satchmo_quick_order as quick_order %}
-        {% if quick_order %}<a href="{{ quick_order }}">{% trans "Quick Order" %}</a> {% endif %}
-		{% plugin_point "sidebar_links" %}
-
-	    <h3>{% trans "Account Information" %}</h3>
-	    {% if user.is_staff %}
-		<a href="{% url admin:index %}" target="blank">{% trans "Admin" %}</a><br/>
-		{% endif %}
-	    {% if user.is_authenticated %}
-		{% url satchmo_account_info as accounturl %}
-        {% if accounturl %}<a href="{{ accounturl }}" target="blank">{% trans "Account Details" %}</a><br/>{% endif %}
-        <a href="{{ logout_url }}?next={{request.path}}">{% trans "Log out" %}</a><br/>
-	    {% else %}
-        <a href="{{ login_url }}?next={{request.path}}">{% trans "Log in" %}</a><br/>
-	    {% endif %}
-
-		{% url satchmo_cart as carturl %}
-	    {% if carturl %}<a href="{{ carturl }}">{% trans "Cart" %}</a>{% endif %}
-
-	    {% if not cart.is_empty %}
-            ({{ cart_count|normalize_decimal }} - {% if sale %}{{ cart|discount_cart_total:sale|currency }}{% else %}{{cart.total|currency}}{% endif%}) <br/>
-            {% url satchmo_checkout-step1 as checkouturl %}
-            {% if checkouturl %}<a href="{{ checkouturl }}">{% trans "Check out" %}</a>{% endif %}
-	    {% endif %}
-	
-		{% plugin_point "shop_sidebar_actions" %}
-    
-		{% url satchmo_contact as contact_url %}
-	    {% if contact_url %}<p><a href="{{ contact_url }}">{% trans "Contact Us" %}</a></p>{% endif %}
-
-		{% satchmo_language_selection_form %}
-
-		{% block sidebar-primary-bottom %}
-		{% plugin_point "shop_sidebar_primary" %}
-		{% endblock %}
-		{% endblock sidebar-primary %}
-	</div>
-
-	<div id="content">
-	    {% block content %}{% endblock %}
-	</div>
-
-	<div id="footer">
-		{% block footer %}
-		{% blocktrans %}Powered by <a href="http://www.satchmoproject.com">Satchmo</a>.{% endblocktrans %}
-		{% endblock %}
-	</div>
-
+            </div>
+            {% endblock sidebar-categories %}
+            
+            {% block sidebar-secondary-bottom %}
+            {% plugin_point "sidebar_secondary_bottom" %}
+            {% endblock %}
+            {% endblock sidebar %}
+        </div>
+        {% endblock sidebar-secondary %} 
     </div>
-	{% block page-close %}
-    {% block google-tracker %}
-    {% if shop.options.GOOGLE.ANALYTICS.value %}
-        {% show_tracker is_secure %}
-    {% endif %}
-    {% endblock %}
-	{% endblock %}
+  </div>
+  <!-- end sidebar -->
+</div><!--col_5 -->
+<div class="col_11 col">
+{% block content %}{% endblock %}
+</div> <!-- content col_11-->
+<!-- end wrap -->
+<div class="row">
+<div class="col_16">
+
+</div><!-- col 16 -->
+</div>
+
+</div>
+</div>
+<footer class="row">
+<div id="footer_top"></div>
+<div id="footer_body">
+{% block footer %}
+{% blocktrans %}
+<section class="col_4 col white_text">
+   F.H.U. Kamel <br/>
+   ul. Toruńska 20<br/>
+   Gdańsk
+</section>
+<section class="col_4 col white_text">
+   F.H.U. Kamel <br/>
+   ul. Toruńska 20<br/>
+   Gdańsk
+</section>
+<section class="col_4 col white_text">
+ F.H.U. Kamel <br/>
+   ul. Toruńska 20<br/>
+   Gdańsk
+</section>
+<section class="col_4 col white_text">
+ F.H.U. Kamel <br/>
+   ul. Toruńska 20<br/>
+   Gdańsk   
+</section>
+{% endblocktrans %}
+{% endblock %}
+</div>
+</footer>
+ {% block page-close %}
+ {% block google-tracker %}
+ {% if shop.options.GOOGLE.ANALYTICS.value %}
+ {% show_tracker is_secure %}
+ {% endif %}
+ {% endblock %}
+ {% endblock %}
 </body>
 {% endblock %}
 </html>
